# PhysSim

./: .gitignore  CMakeLists.txt  Engine.cpp  README.md  config.json  main  main.cpp  swapS
Calculator.dSYM/Contents/Resources/DWARF/: Calculator
Calculator_/: Calculator  Calculator.cpp
simulation/include/: Application.h  config.h  settings.h  simulation_runner.h
simulation/include/collisions/: box_constraint.h  brute_force_collision.h  collision_algo.h
simulation/include/core/: double_buffer.h  material.h  particle.h  particle_snapshot.h  particle_system.h
simulation/include/forces/: force_field.h  global_gravity.h  linear_damping.h  pair_gravity.h
simulation/include/integrators/: euler.h  integrator.h  verlet.h
simulation/include/math/: phisics.h  physics.h
simulation/include/render/: headless_backend.h  render_backend.h  sfml_backend.h  sim_event.h
simulation/include/scenarios/: billiards.h  scenario.h  scenario_manager.h  solar_system.h
simulation/src/: Application.cpp  config.cpp  main.cpp  simulation_runner.cpp
simulation/src/collisions/: box_constraint.cpp  brute_force_collision.cpp
simulation/src/core/: particle.cpp  particle_system.cpp
simulation/src/forces/: global_gravity.cpp  linear_damping.cpp  pair_gravity.cpp
simulation/src/integrators/: euler.cpp  verlet.cpp
simulation/src/render/: render_system.cpp  sfml_backend.cpp
simulation/src/scenarios/: billiards.cpp  solar_system.cpp
simulation/tests/: test_physics.cpp
tests.dSYM/Contents/Resources/DWARF/: tests
Всякая хуйня/Calculator_/Calculator.dSYM/Contents/Resources/Relocations/aarch64/: Calculator.yml
Всякая хуйня/Swap/: swapS.cpp
Всякая хуйня/Что-то о физических библиотеках/: tests.cpp
Моделирование/include/: IPhisicsObj.h  material.h  particle.h  particle_system.h  visualize.h
Моделирование/include/core/: material.h  particle.h  particle_system.h
Моделирование/include/math/: my_vector2.h  phisics.h
Моделирование/include/render/: render_system.h  sfml_x.h
Моделирование/src/: particle.cpp  particle_system.cpp
Моделирование/src/core/: particle.cpp  particle_system.cpp
Моделирование/src/render/: render_system.cpp  sfml_x.cpp
Моделирование/tests/: tests.cpp
Тестовые классы/: particle.cpp  particle.h  tests.cpp
Что-то о физических библиотеках/: Engine.cpp  Engine.h
